--- a/03_osa/03_harjoitukset/esimerkkivastaukset/silmukat_06.html
+++ b/03_osa/03_harjoitukset/esimerkkivastaukset/silmukat_06.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>silmukat 6</h1>
+    <p>Keskiarvo löytyy konsolista</p>
     <script src="silmukat_06.js"></script>
   </body>
 </html>
